Fix overflow

--- a/css/core.css
+++ b/css/core.css
@@ -9,6 +9,7 @@ body {
     width: 100vw;
     max-width: 100vw;
     margin: 0;
+    overflow-x: hidden;
 }
 
 button {
